buildscript {
    ext {
        springBootVersion = '3.3.3'
        springVersion = '6.1.12'
        jacksonVersion = '2.17.2'
        mockitoVersion = '5.2.+'
        retrofitVersion = '2.11.0'
    }
    dependencies {
        classpath 'org.owasp:dependency-check-gradle'
    }
}

plugins {
    id 'java'
    id "org.owasp.dependencycheck" version "10.0.4"
    id "io.freefair.lombok" version "8.10"
    id "io.github.gradle-nexus.publish-plugin" version "2.0.0"
}

group 'ee.bitweb'
version '3.4.0'
java {
    sourceCompatibility = '17'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add("-parameters")
}

apply from: "test.gradle"
apply from: "sonarcloud.gradle"
apply from: "library.gradle"

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-catalina
    compileOnly group: 'org.apache.tomcat', name: 'tomcat-catalina', version: '10.1.28'

    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
    compileOnly group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"

    // https://mvnrepository.com/artifact/org.springframework/spring-tx
    compileOnly group: 'org.springframework', name: 'spring-tx', version: "${springVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.amqp/spring-amqp
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor
    annotationProcessor  group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-autoconfigure
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
    compileOnly group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "${jacksonVersion}"

    // https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api
    compileOnly group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0'

    // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
    compileOnly group: 'com.squareup.retrofit2', name: 'retrofit', version: "${retrofitVersion}"

    // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-jackson
    compileOnly group: 'com.squareup.retrofit2', name: 'converter-jackson', version: "${retrofitVersion}"

    // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
    compileOnly group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.12.0'

    // https://mvnrepository.com/artifact/de.siegmar/logback-gelf
    compileOnly group: 'de.siegmar', name: 'logback-gelf', version: '6.0.2'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.amqp/spring-amqp
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.json/json
    testImplementation group: 'org.json', name: 'json', version: '20240303'

    // https://mvnrepository.com/artifact/ee.bitweb/spring-test-core
    testImplementation group: 'ee.bitweb', name: 'spring-test-core', version: '2.+'

    // https://mvnrepository.com/artifact/org.mockito/mockito-inline
    testImplementation group: 'org.mockito', name: 'mockito-inline', version: "${mockitoVersion}"

    // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: "${mockitoVersion}"

    // https://mvnrepository.com/artifact/org.mock-server/mockserver-netty
    testImplementation ("org.mock-server:mockserver-netty:5.15.0") {
        exclude group: 'junit', module: 'junit'
    }

    testImplementation group : 'org.testcontainers', name: 'testcontainers',  version: "1.+"
}

configurations {
    testImplementation.extendsFrom compileOnly
}
